--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -127,7 +127,7 @@
         min-height: 30vh
 
         .paper 
-            @apply flex flex-row items-center
+            @apply flex flex-col items-end
             padding: $spacing_sm 0 
           
             border-bottom: $ca-blue-200 1px solid
