--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -32,7 +32,7 @@
     @apply mb-4 sm:mb-0 p-8 md:p-6 hover:shadow-lg transition-shadow
     border-radius: 8px
     display: grid
-    grid-template-rows: 40px 1fr auto
+    grid-template-rows:  1fr auto
     align-items: left
     justify-content: space-between
     height: 100%
