--- a/app/globals.sass
+++ b/app/globals.sass
@@ -45,4 +45,8 @@ body
   .text-balance 
     text-wrap: balance
   
+.standard_margin 
+  @apply lg:mx-36 md:mx-14 sm:mx-14 mx-12 lg:my-12 md:my-8 sm:my-4 my-4 xl:mx-44 2xl:mx-60
 
+.standard_padding 
+  @apply lg:px-36 md:px-14 sm:px-14 px-8 lg:py-16 md:py-12 sm:py-8 py-8 xl:px-44 2xl:px-60
