--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -19,9 +19,9 @@
             object-position: 50% 0
     .award_section 
         display: flex
-        margin: $spacing_xl auto
+        margin: $spacing_md auto $spacing_md  0
         background: #fff9e6
-        gap: $spacing_md
+        gap: $spacing_xsm
         border-radius: 24px
         border: 2px $ca-or-100 solid
         width:100%
@@ -29,6 +29,7 @@
         align-self: center
         align-items: center
         text-align: center
+        padding: 1rem 0
         .award_title
             display: flex
         
@@ -100,6 +101,7 @@
         text-align: left
         // gap: 1.2rem
         align-self: flex-start
+        gap: $spacing_md
         .award_title
             display: flex
             flex-direction: column
