--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -12,7 +12,7 @@
             @apply max-w-[75ch]
             @apply text-gray-800
     .group_description 
-        background-image: url("/assets/img/banner_prueba.png")
+        background-image: url("/assets/img/banner_home.png")
         height:50vh
         background-size:  100vw
         img
